--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body {
   margin: 10px 60px;
   font-size: 30px;
   color: #ffffff;
+  padding: 0 15px;
 }
 .box input:hover {
   background: rgba(255, 255, 255, 0.008);
@@ -76,13 +77,11 @@ body {
   caret-color: red;
 }
 .box button {
-  width: 420px;
+  width: 455px;
   height: 80px;
   margin: 20px 60px;
   background: #ff903c;
   border: 2px solid #ccaa90;
-  box-shadow: 10px 10px 18px rgba(255, 255, 255, 0.26),
-    -10px -10px 24px rgba(255, 255, 255, 0.26);
   border-radius: 20px;
   font-size: 24px;
   text-align: center;
@@ -91,6 +90,8 @@ body {
 .box button:hover {
   color: gold;
   background: #311a09;
+  box-shadow: 10px 10px 18px rgba(255, 255, 255, 0.26),
+  -10px -10px 24px rgba(255, 255, 255, 0.26);
 }
 .box h2 {
   font-size: 36px;
